# weatherbackend

./: CMakeLists.txt
src/: main.cpp
src/database/: DatabaseHelper.cpp  DatabaseHelper.h  DatabaseManager.cpp  DatabaseManager.h
src/datasources/: Tempest.cpp  Tempest.h
src/entities/: WeatherDataEntity.cpp  WeatherDataEntity.h
src/image/: Scene.cpp  Scene.h  Writer.cpp  Writer.h
src/image/Elements/: Base.cpp  Base.h  FunctionCall.cpp  FunctionCall.h  SceneElement.cpp  SceneElement.h  TextElement.cpp  TextElement.h
src/modules/: BaseModule.cpp  BaseModule.h  DateTime.cpp  DateTime.h  Weather.cpp  Weather.h
